tests/macros/password/default.stderr
error: option `default` does not exist for kind `password`
 --> $DIR/default.rs:2:46
  |
2 |     let q = discourse::questions![Password { default: todo!() }];
  |                                              ^^^^^^^
