tests/macros/password/default.rs
fn main() {
    let q = discourse::questions![Password { default: todo!() }];
}
